--- a/src/app/components/product-area/product-details/product-details.component.html
+++ b/src/app/components/product-area/product-details/product-details.component.html
@@ -10,5 +10,9 @@
     <span> | </span>
 
     <a [routerLink]="'/products/edit/' + product.id">Edit</a>  
+    <span> | </span>
+    <a href="javascript:void(0)" (click)="deleteMe()">delete</a>
+
+    <span> | </span>
 </div>
   
