we are starting to code alone

--- a/src/app/components/layout-area/menu/menu.component.html
+++ b/src/app/components/layout-area/menu/menu.component.html
@@ -3,7 +3,10 @@
     <a routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</a>
     <a routerLink="/about" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">About</a>
     <a routerLink="/products" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Products</a>
+    <a routerLink="/top3" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Top 3 Products</a>
     <a routerLink="/products/new" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Create Product</a>
+    <a routerLink="/numbers" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">numbers</a>
+
     
 
 
