--- a/src/app/components/product-area/product-list/product-list.component.html
+++ b/src/app/components/product-area/product-list/product-list.component.html
@@ -1,4 +1,10 @@
 <div>
-    <app-product-card *ngFor="let p of products" [product]="p"></app-product-card>
+    <app-product-card *ngFor="let p of pagedProducts" [product]="p"></app-product-card>
+
+    <hr />
+
+    <button (click)="prev()">◀</button>
+    <button (click)="next()">▶</button>
+
 
 </div>
