--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,26 @@
+.light-theme {
+    --bg-color: #ffffff;
+    --text-color: #000000;
+  }
+  
+  .dark-theme {
+    --bg-color: #121212;
+    --text-color: #ffffff;
+  }
+  
+  /* Apply variables */
+  body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+  }
+
+
 html, body {
     margin: 0;
     text-align: center;
     height: 100%;
-    background-image: linear-gradient(hsla(0, 100%, 81%, 0.811) , lab(100% 0.01 -0.01));
+    background-color: var(--bg-color);
+    color: var(--text-color)
 
 }
 
